<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RealVirtualSensorSimulator</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_main">Main</string>
    <string name="menu_quit">Quit</string>
    <string name="view_status_title">Status Messages:</string>
    <string name="settings_address_hint">address</string>
    <string name="settings_address_title">Server address and port number:</string>
    <string name="settings_port_hint">port</string>
    <string name="settings_sensors_title">Available sensors:</string>
    <string name="settings_interval_title">Sensor event interval:</string>
    <string name="settings_interval_unit">ms</string>
    <string name="settings_location_title">Location:</string>
    <string name="settings_location_hint">e.g. office</string>
    <string name="settings_gps_location_title">GPS</string>
    <string name="settings_button_exit_title">Return</string>
    <string name="settings_button_save_title">Save</string>
    <string name="settings_button_reset_title">Reset</string>
    <string name="event_button_reset_title">Clear</string>
    <string name="event_button_toggle_start_title">Start</string>
    <string name="event_button_toggle_pause_title">Pause</string>
    <string name="marker_button_exit_title">Return</string>
    <string name="toast_sensorlistener_stopped">Sensor events listening paused</string>
    <string name="toast_sensorlistener_no_sensors_selected">No sensors selected for listening, please select at least one sensor</string>
	<string name="alert_no_sensors_selected_title">No sensors selected!</string>
	<string name="alert_no_sensors_selected_content">Go to settings view for selecting sensors?</string>
	<string name="alert_no_gps_selected_title">GPS not enabled!</string>
	<string name="alert_no_gps_selected_content">Do you wish to enable GPS now?</string>
    <string name="exception_unknown_host">Application was unable to resolve server host: </string>
    <string name="marker_content_description">Augmented reality marker</string>
</resources>
