<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_status_title"
        android:textColor="#FFF"/>
    
    <LinearLayout android:id="@+id/event_status_message_holder"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="8dp"
        android:background="@drawable/border"/>
    
     <LinearLayout 
        android:orientation="horizontal"
        android:layout_gravity="right"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        	<Button android:id="@+id/event_reset_button"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:text="@string/event_button_reset_title"/>
        	<Button android:id="@+id/event_toggle_button"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:text="@string/event_button_toggle_start_title"/>
     </LinearLayout>

</LinearLayout>
